--- a/imag/strona/rejestr.html
+++ b/imag/strona/rejestr.html
@@ -5,11 +5,11 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html>
+<!--<html>
     <head>
     <meta charset="utf-8" />
     <title>Profer</title>
-    <!-- Bootstrap -->
+    <!-- Bootstrap 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style>
       button:hover {
@@ -70,7 +70,7 @@ and open the template in the editor.
                         </div>
                     </form>
             </div>
-<!------------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------
 <div class="continer" id="reg">
     <div class="col-sm-10">
         <div class="row">
@@ -100,6 +100,114 @@ and open the template in the editor.
         </div>
      </div>    
 </div>
+
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+    <meta charset="utf-8" />    
+    <title>Profer</title>
+    <!-- Bootstrap -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
+     <style>
+        .box {
+            background-color: #000;
+            color: #fefefe; font-size: large;
+            text-align: center; 
+            padding: 10px;
+        }
+        .content-box {
+           margin-top: 150px;
+        }
+         
+        .form {
+            background-color: #d71313;
+        }
+        .box-login {
+            background-color: #00cccc;
+        }
+    </style>
+    </head>
+<body>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 pull-right">            
+                    <a style="color: #000;" class="fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
+                    <a style="color: #000;" class="fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
+                    <a style="color: #000;" class="fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
+                    <a style="color: #000;" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
+                    <a style="color: #000;" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+                </div>
+                <div class="col-sm-8">
+                        <a href="test_proffero.html"><img src="logo.png"/></a>
+                </div>
+                <div class="col-sm-6 pull-right">
+                    <a class="btn btn-primary" href="rejestr.html">rejestracja</a>
+                    <a class="btn btn-primary" href="login.html">Logowanie</a>
+                </div>
+            </div>
+        <div class="navbar box">
+            <div class="row">
+                 <div class="col-sm-12">
+                     <a class="box" href="#">BROWSE JOBS</a>
+                     <a class="box" href='#'>FIND A PRO</a>
+                     <a class="box" href="#">COUPONS</a>
+                     <a class="box" href="#">PRODUCT & SERVICES</a>
+                 </div>
+            </div>
+        </div>
+    </nav>
+<div class="container-fluid">
+    <div class="box-login"> 
+        <div class="row">
+            <div class="col-sm-10" style="margin-left: 10%; padding: 2%">
+                <form name="sentMessage" class="well" novalidate>
+                    <div class="control-group">
+                    <div class="controls">
+                    <input type="text" class="form-control" placeholder="Login" id="name" required data-validation-required-message="Proszę wpisz swój login" />
+                    </div>
+                    </div>   
+                    <div class="control-group">
+                    <div class="controls">
+                    <input type="password" class="form-control" placeholder="Hasło" id="email" required data-validation-required-message="Proszę wpisz hasło" />
+                    </div>
+                    <div class="controls">
+                    <input type="password" class="form-control" placeholder="Hasło" id="email" required data-validation-required-message="Proszę wpisz hasło" />
+                    </div>
+
+                    <button type="submit" class="btn btn-primary pull-left">Zapisz</button><br />
+                    </div>
+                </form>
+            </div>
+         </div>
+    </div>
+</div>
+    <div class="container" style="margin-top: 10%; margin-bottom: 2%;">
+        <div class="row">
+            <div class="col-sm-4">
+                <a style="color: #000;" href="#" class="fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a style="color: #000;" href="#" class="fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a style="color: #000;" href="#" class="fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a style="color: #000;" href="#" class="fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
+            </div>
+            <div class="col-sm-4">
+                <a style="color: #000;" href="#" class="fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a style="color: #000;" href="#" class="fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a style="color: #000;" href="#" class="fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container-fluid" style="background-color: #000;">
+           © 
+        </div>
+    </footer>
 <!--   </div> -->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
