wersja_dla_klienta

--- a/imag/strona/test_proffero.html
+++ b/imag/strona/test_proffero.html
@@ -15,7 +15,8 @@ and open the template in the editor.
      <style>
         .box {
             background-color: #000;
-            color: #fefefe; font-size: large;
+            color: #fefefe; 
+            font-size: large;
             text-align: center;
             padding: 10px;
         }
