--- a/imag/strona/test_proffero.html
+++ b/imag/strona/test_proffero.html
@@ -12,21 +12,7 @@ and open the template in the editor.
     <!-- Bootstrap -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
-     <style>
-        .box {
-            background-color: #000;
-            color: #fefefe; 
-            font-size: large;
-            text-align: center;
-            padding: 10px;
-        }
-        .content-box {
-           margin-top: 150px;
-        }
-        .border {
-            padding: 2px;
-        }       
-    </style>
+    <link href="style.css" rel="stylesheet">
     </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
