--- a/imag/strona/rejestr.html
+++ b/imag/strona/rejestr.html
@@ -20,11 +20,11 @@ and open the template in the editor.
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6 col-xs-8">
-                    <a style="color: #000;" class="pull-right fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
-                    <a style="color: #000;" class="pull-right fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
-                    <a style="color: #000;" class="pull-right fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
-                    <a style="color: #000;" class="pull-right fa fa-linkedin fa-2x" aria-hidden="true"></a>
-                    <a style="color: #000;" class="pull-right fa fa-instagram fa-2x" aria-hidden="true"></a>
+                    <a class="font-color pull-right fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
+                    <a class="font-color pull-right fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
+                    <a class="font-color pull-right fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
+                    <a class="font-color pull-right fa fa-linkedin fa-2x" aria-hidden="true"></a>
+                    <a class="font-color pull-right fa fa-instagram fa-2x" aria-hidden="true"></a>
             </div>
                         <a class="col-xs-12 clo-sm-12" href="test_proffero.html"><img src="logo.png"/></a>
                         <div class="col-xs-9 col-sm-6 col-md-6">
@@ -61,17 +61,17 @@ and open the template in the editor.
     </div>    
     <div class="container-fluid">
         <div class="row">
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a style="color: #000;" href="#" class="col-xs-3 col-sm-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
             </div>
         </div>
     <footer>
-        <div class="container-fluid" style="background-color: #000;">
+        <div class="container-fluid color">
            © 
         </div>
     </footer>
