stytle w osobnym pliku

--- a/imag/strona/rejestr.html
+++ b/imag/strona/rejestr.html
@@ -33,8 +33,8 @@ and open the template in the editor.
                         </div>
             </div>
             <div class="row box">
-                <div class="col-xs-12">
-                    <a href="#">BROWSE JOBS</a>
+                <div class="col-xs-12" id="menu">
+                     <a href="#">BROWSE JOBS</a>
                      <a href='#'>FIND A PRO</a>
                      <a href="#">COUPONS</a>
                      <a href="#">PRODUCT & SERVICES</a>
