--- a/imag/strona/login.html
+++ b/imag/strona/login.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                         </div>
             </div>
             <div class="row box">
-                <div class="col-xs-12">
+                <div class="col-xs-12" id="menu">
                     <a href="#">BROWSE JOBS</a>
                      <a href='#'>FIND A PRO</a>
                      <a href="#">COUPONS</a>
