stytle w osobnym pliku

--- a/imag/strona/rejestr.html
+++ b/imag/strona/rejestr.html
@@ -19,21 +19,19 @@ and open the template in the editor.
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-6 col-xs-8">
-                    <a class="font-color pull-right fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
-                    <a class="font-color pull-right fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
-                    <a class="font-color pull-right fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
-                    <a class="font-color pull-right fa fa-linkedin fa-2x" aria-hidden="true"></a>
-                    <a class="font-color pull-right fa fa-instagram fa-2x" aria-hidden="true"></a>
-            </div>
-                        <a class="col-xs-12 clo-sm-12" href="test_proffero.html"><img src="logo.png"/></a>
-                        <div class="col-xs-9 col-sm-6 col-md-6">
-                        <a class="btn btn-primary pull-right" href="rejestr.html">Rejestracja</a>
-                        <a class="btn btn-primary pull-right" href="login.html">Logowanie</a>
-                        </div>
+                <a class="col-xs12 clo-sm12 col-lg-5 pull-left" href="test_proffero.html"><img src="logo.png"/></a>
+                    <div class="col-sm6 col-xs8 col-lg ">
+                        <a class="font-color fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
+                        <a class="font-color fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
+                        <a class="font-color fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
+                        <a class="font-color fa fa-linkedin fa-2x" aria-hidden="true"></a>
+                        <a class="font-color fa fa-instagram fa-2x" aria-hidden="true"></a>
+                    </div>                        
+                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="rejestr.html">Rejestracja</a>
+                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="login.html">Logowanie</a>
             </div>
             <div class="row box">
-                <div class="col-xs-12" id="menu">
+                <div class="col-xs-12 col-lg-12" id="menu">
                      <a href="#">BROWSE JOBS</a>
                      <a href='#'>FIND A PRO</a>
                      <a href="#">COUPONS</a>
