stytle w osobnym pliku 2

--- a/imag/strona/rejestr.html
+++ b/imag/strona/rejestr.html
@@ -1,47 +1,46 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
 <html>
     <head>
     <meta charset="utf-8" />    
     <title>Profer</title>
     <!-- Bootstrap -->
+    <link href='http://fonts.googleapis.com/css?family=Abril+Fatface&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="style.css" rel="stylesheet">
-    
     </head>
-<body>
+<body>    
     <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <a class="col-xs12 clo-sm12 col-lg-5 pull-left" href="test_proffero.html"><img src="logo.png"/></a>
-                    <div class="col-sm6 col-xs8 col-lg ">
+                <a class="col-xs-8 col-sm-4 col-md-6 col-lg-6 pull-left" href="test_proffero.html"><img src="logo.png"/></a>
+                    <div class="col-xs-8 col-sm-4 col-md-6 col-lg-6">
                         <a class="font-color fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-linkedin fa-2x" aria-hidden="true"></a>
                         <a class="font-color fa fa-instagram fa-2x" aria-hidden="true"></a>
                     </div>                        
-                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="rejestr.html">Rejestracja</a>
-                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="login.html">Logowanie</a>
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                        <a class="btn btn-primary pull-right" href="rejestr.html">Rejestracja</a>
+                        <a class="btn btn-primary pull-right" href="login.html">Logowanie</a>
+                    </div>
             </div>
+        </div>
+        <div class="container-fluid">
             <div class="row box">
-                <div class="col-xs-12 col-lg-12" id="menu">
-                     <a href="#">BROWSE JOBS</a>
-                     <a href='#'>FIND A PRO</a>
-                     <a href="#">COUPONS</a>
-                     <a href="#">PRODUCT & SERVICES</a>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-12" id="menu">
+                    <a href="#">BROWSE JOBS</a>
+                    <a href='#'>FIND A PRO</a>
+                    <a href="#">COUPONS</a>
+                    <a href="#">PRODUCT & SERVICES</a>
                 </div>
             </div>
+        </div>
     </nav>
+
     <div class="container-fluid well" id="img">
         <div class="row">
-            <div class="col-lg-4 pull-left">
+            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-12 pull-right">
                 <form name="login" novalidate>
                     <div class="controls control-group">
                     <input type="text" class="form-control" placeholder="Login" id="name" required data-validation-required-message="Proszę wpisz swój login" />
@@ -57,15 +56,15 @@ and open the template in the editor.
             </div>
         </div>
     </div>    
-    <div class="container-fluid">
+<div class="container-fluid">
         <div class="row">
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
             </div>
         </div>
     <footer>
@@ -73,7 +72,6 @@ and open the template in the editor.
            © 
         </div>
     </footer>
-
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
