--- a/imag/strona/test_proffero.html
+++ b/imag/strona/test_proffero.html
@@ -17,55 +17,60 @@ and open the template in the editor.
     </head>
 <body>    
     <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <a class="col-xs12 clo-sm12 col-lg-5 pull-left" href="test_proffero.html"><img src="logo.png"/></a>
-                    <div class="col-sm6 col-xs8 col-lg ">
+                <a class="col-xs-8 col-sm-4 col-md-6 col-lg-6 pull-left" href="test_proffero.html"><img src="logo.png"/></a>
+                    <div class="col-xs-8 col-sm-4 col-md-6 col-lg-6">
                         <a class="font-color fa fa-facebook fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-google-plus fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-twitter fa-2x" aria-hidden="true" href="#"></a>
                         <a class="font-color fa fa-linkedin fa-2x" aria-hidden="true"></a>
                         <a class="font-color fa fa-instagram fa-2x" aria-hidden="true"></a>
                     </div>                        
-                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="rejestr.html">Rejestracja</a>
-                    <a class="btn btn-primary col-xs-9 col-sm-6 col-md-6 col-lg-1 pull-right" href="login.html">Logowanie</a>
+                    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-6">
+                        <a class="btn btn-primary pull-right" href="rejestr.html">Rejestracja</a>
+                        <a class="btn btn-primary pull-right" href="login.html">Logowanie</a>
+                    </div>
             </div>
+        </div>
+        <div class="container-fluid">
             <div class="row box">
-                <div class="col-xs-12 col-lg-12" id="menu">
-                     <a href="#">BROWSE JOBS</a>
-                     <a href='#'>FIND A PRO</a>
-                     <a href="#">COUPONS</a>
-                     <a href="#">PRODUCT & SERVICES</a>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-12" id="menu">
+                    <a href="#">BROWSE JOBS</a>
+                    <a href='#'>FIND A PRO</a>
+                    <a href="#">COUPONS</a>
+                    <a href="#">PRODUCT & SERVICES</a>
                 </div>
             </div>
+        </div>
     </nav>
     <!---  Nagłówek strony -->
     <div class="container">
         <div class="row">
-                <img class="col-xs-12 col-sm-5 pull-left" src="img/slide-architect.png"/>
-                      <a class="col-xs-12 pull-right col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-right col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-right col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-right col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-            </div>
-        <div class="row">
-                <img class="col-xs-12 col-sm-5 pull-right" src="img/stock-man-laptop.png"/> 
-                      <a class="col-xs-12 pull-left col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-left col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-left col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                      <a class="col-xs-12 pull-left col-sm-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-            </div>
+            <img class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-left" src="img/slide-architect.png"/>
+            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+         </div>       
     </div>
-
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
-                <a href="#" class="font-color col-xs-3 col-sm-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <img class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-right" src="img/stock-man-laptop.png"/> 
+                <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+                <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+                <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+        </div>
+    </div>
+   <div class="container-fluid">
+        <div class="row">
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-car fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-truck fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-wrench fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-graduation-cap fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>              
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-camera fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-file-code-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
+                <a href="#" class="text font-color col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-file-image-o fa-2x" aria-hidden="true"> tekst pobrany z bazy</a>
             </div>
         </div>
     <footer>
