stytle w osobnym pliku 2

--- a/imag/strona/test_proffero.html
+++ b/imag/strona/test_proffero.html
@@ -48,18 +48,18 @@ and open the template in the editor.
     <div class="container">
         <div class="row">
             <img class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-left" src="img/slide-architect.png"/>
+            <a class="padding-top text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
             <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
             <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-            <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+            <a class="padding-bottom text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
          </div>       
     </div>
     <div class="container">
         <div class="row">
                 <img class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-right" src="img/stock-man-laptop.png"/> 
+                <a class="padding-top text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
                 <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
-                <a class="text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
+                <a class="padding-bottom text col-xs-12 col-sm-6 col-md-6 col-lg-6 fa fa-search fa-2x">teks pobrany z bazy</a>
         </div>
     </div>
    <div class="container-fluid">
